--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,129 +7,130 @@ include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 
 block main
-  +alert-suceess(5000)
+  if(role.permissions.includes("products_view"))
+    +alert-suceess(5000)
 
-  h1(class="test") Danh sách sản phẩm
+    h1(class="test") Danh sách sản phẩm
 
-  .card.mb-3 
-    .card-header Bộ lọc và tìm kiếm 
-      .card-body 
-        .row
-          .col-6
-            +filter-status(filterStatus)
-          
-          .col-6
-            +search()
-
-    .card.mb-3
-      .card-header Sắp xếp 
-      .card-body 
-        .row 
-          .col-4 
-            +sort()
+    .card.mb-3 
+      .card-header Bộ lọc và tìm kiếm 
+        .card-body 
+          .row
+            .col-6
+              +filter-status(filterStatus)
             
-  .card.mb-1 
-    .card-header Sản phẩm
-      .card-body 
-        .row 
-          .col-8
-            +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-          .col-4
-            if(role.permissions.includes("products_create"))
-              a(
-                href=`${prefixAdmin}/products/create` 
-                class="btn btn-outline-success"
-              ) + Thêm mới
+            .col-6
+              +search()
 
-        table(
-          class="table table-hover table-sm mt-4" 
-          checkbox-multi
-        )  
-          thead
-            tr  
-              th 
-                input(type="checkbox" name="checkall")
-              th STT 
-              th Hình ảnh 
-              th Tiêu đề
-              th Giá
-              th Vị trí
-              th Trạng thái
-              th Hành động
-          
-          tbody 
-            each item, index in products
-              tr(class="tr") 
-                td 
-                  input(
-                    type="checkbox"
-                    name="id"
-                    value=item.id
-                  )
-                td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
-                td 
-                  img(
-                    src = item.thumbnail
-                    alt=item.title
-                    width="100px"
-                    height="100px"
-                    style="object-fit: cover"
-                  )
-                td #{item.title}
-                td #{item.price}
-                td 
-                  input(
-                    type="number"
-                    value=item.position
-                    style="width: 60px"
-                    min=1
-                    name="position"
-                  )
-                td
-                  if(item.status == "active")
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status
-                     class="badge bg-success") Hoạt động
-                  else 
-                    a(href="javascript:;"
-                    data-status=item.status
-                    data-id=item.id
-                    button-change-status 
-                    class="badge bg-warning") Dừng hoạt động
-                td 
-                  a(
-                      href=`${prefixAdmin}/products/detail/${item.id}`
-                      class="btn btn-secondary btn-sm"
-                      ) Chi tiết
-                  if(role.permissions.includes("products_edit"))
-                    a(
-                      href=`${prefixAdmin}/products/edit/${item.id}`
-                      class="btn btn-warning btn-sm ms-2"
-                      ) Sửa 
-                  if(role.permissions.includes("products_delete"))
-                    button(
-                      class="btn btn-danger btn-sm ms-1 ms-2" 
-                      button-delete 
+      .card.mb-3
+        .card-header Sắp xếp 
+        .card-body 
+          .row 
+            .col-4 
+              +sort()
+              
+    .card.mb-1 
+      .card-header Sản phẩm
+        .card-body 
+          .row 
+            .col-8
+              +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+            .col-4
+              if(role.permissions.includes("products_create"))
+                a(
+                  href=`${prefixAdmin}/products/create` 
+                  class="btn btn-outline-success"
+                ) + Thêm mới
+
+          table(
+            class="table table-hover table-sm mt-4" 
+            checkbox-multi
+          )  
+            thead
+              tr  
+                th 
+                  input(type="checkbox" name="checkall")
+                th STT 
+                th Hình ảnh 
+                th Tiêu đề
+                th Giá
+                th Vị trí
+                th Trạng thái
+                th Hành động
+            
+            tbody 
+              each item, index in products
+                tr(class="tr") 
+                  td 
+                    input(
+                      type="checkbox"
+                      name="id"
+                      value=item.id
+                    )
+                  td #{pagination.limitItem*(pagination.currentPage - 1) + index + 1}
+                  td 
+                    img(
+                      src = item.thumbnail
+                      alt=item.title
+                      width="100px"
+                      height="100px"
+                      style="object-fit: cover"
+                    )
+                  td #{item.title}
+                  td #{item.price}
+                  td 
+                    input(
+                      type="number"
+                      value=item.position
+                      style="width: 60px"
+                      min=1
+                      name="position"
+                    )
+                  td
+                    if(item.status == "active")
+                      a(href="javascript:;"
+                      data-status=item.status
                       data-id=item.id
-                    ) Xóa
+                      button-change-status
+                      class="badge bg-success") Hoạt động
+                    else 
+                      a(href="javascript:;"
+                      data-status=item.status
+                      data-id=item.id
+                      button-change-status 
+                      class="badge bg-warning") Dừng hoạt động
+                  td 
+                    a(
+                        href=`${prefixAdmin}/products/detail/${item.id}`
+                        class="btn btn-secondary btn-sm"
+                        ) Chi tiết
+                    if(role.permissions.includes("products_edit"))
+                      a(
+                        href=`${prefixAdmin}/products/edit/${item.id}`
+                        class="btn btn-warning btn-sm ms-2"
+                        ) Sửa 
+                    if(role.permissions.includes("products_delete"))
+                      button(
+                        class="btn btn-danger btn-sm ms-1 ms-2" 
+                        button-delete 
+                        data-id=item.id
+                      ) Xóa
 
-  +pagination()
+    +pagination()
 
-  form(
-    action =""
-    method ="POST"
-    id="form-change-status"
-    data-patch=`${prefixAdmin}/products/change-status/`
-  )
+    form(
+      action =""
+      method ="POST"
+      id="form-change-status"
+      data-patch=`${prefixAdmin}/products/change-status/`
+    )
 
-  form(
-    action =""
-    method ="POST"
-    id="form-delete-item"
-    data-patch=`${prefixAdmin}/products/delete`
-  )
+    form(
+      action =""
+      method ="POST"
+      id="form-delete-item"
+      data-patch=`${prefixAdmin}/products/delete`
+    )
 
   script(src="/admin/js/product.js")
           
