--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -3,140 +3,141 @@ include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
 block main
-  +alert-error(5000)
-  h1(class="mb-4") Chỉnh sửa sản phẩm
+  if(role.permissions.includes("products_edit"))
+    +alert-error(5000)
+    h1(class="mb-4") Chỉnh sửa sản phẩm
 
-  form(
-    action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
-    enctype="multipart/form-data"
-    id="form-edit-product"
-    method="POST"
-  )
-
-    div(class="form-group")
-      label(for="title") Tiêu đề
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        value=product.title
-      )
-    
-    div(class="form-group")
-    label(for="product_category_id") Danh mục
-    select(
-      name=categoryName.title
-      id="product_category_id"
-      class="form-control"
-    ) 
-      option(value="") -- Chọn danh mục --
-        if(category)
-          +select-tree(category)
-    
-    div(class="form-group")
-      label(for="desc") Mô tả
-      textarea(
-        class="form-control textarea-mce"
-        id="desc"
-        name="description"
-        rows="5"
-        value=product.description
-      ) #{product.description}
-
-    div(class="form-group")
-      label(for="price") Giá
-      input(
-        type="number"
-        class="form-control"
-        id="price"
-        name="price"
-        value=product.price
-        min="0"
-      )
-    
-    div(class="form-group")
-      label(for="discount") % Giảm giá
-      input(
-        type="number"
-        class="form-control"
-        id="discount"
-        name="discountPercentage"
-        min="0"
-        value=product.discountPercentage
-      )
-    
-    div(class="form-group")
-      label(for="stock") Số lượng
-      input(
-        type="number"
-        class="form-control"
-        id="stock"
-        name="stock"
-        min="0"
-        value=product.stock
-      )
-    
-    div(class="form-group"
-      upload-image
+    form(
+      action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
+      enctype="multipart/form-data"
+      id="form-edit-product"
+      method="POST"
     )
-      label(for="thumbnail") Ảnh<br>
-      input(
-        type="file"
-        class="form-control-file"
-        id="thumbnail"
-        name="thumbnail"
-        accept="image/*"
-        upload-image-input
-        value=product.thumbnail
-      )
-    
-    img(src=`${product.thumbnail}` 
-        upload-image-preview
-        class="image-preview"
-      )
 
-    div(class="form-group")
-      label(for="position") Vị trí
-      input(
-        type="number"
+      div(class="form-group")
+        label(for="title") Tiêu đề
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          value=product.title
+        )
+      
+      div(class="form-group")
+      label(for="product_category_id") Danh mục
+      select(
+        name=categoryName.title
+        id="product_category_id"
         class="form-control"
-        id="position"
-        name="position"
-        placeholder="Tự động tăng"
-        min="1"
-        value=product.position
-      )
-    
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value=product.status
-        checked = (product.status=="active" ?true :false)
-      )
-      label(for="statusActive" class="form-check-label") Hoạt động
+      ) 
+        option(value="") -- Chọn danh mục --
+          if(category)
+            +select-tree(category)
+      
+      div(class="form-group")
+        label(for="desc") Mô tả
+        textarea(
+          class="form-control textarea-mce"
+          id="desc"
+          name="description"
+          rows="5"
+          value=product.description
+        ) #{product.description}
 
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInactive"
-        name="status"
-        value=product.status
-        checked = (product.status=="inactive" ?true :false)
+      div(class="form-group")
+        label(for="price") Giá
+        input(
+          type="number"
+          class="form-control"
+          id="price"
+          name="price"
+          value=product.price
+          min="0"
+        )
+      
+      div(class="form-group")
+        label(for="discount") % Giảm giá
+        input(
+          type="number"
+          class="form-control"
+          id="discount"
+          name="discountPercentage"
+          min="0"
+          value=product.discountPercentage
+        )
+      
+      div(class="form-group")
+        label(for="stock") Số lượng
+        input(
+          type="number"
+          class="form-control"
+          id="stock"
+          name="stock"
+          min="0"
+          value=product.stock
+        )
+      
+      div(class="form-group"
+        upload-image
       )
-      label(for="statusInactive" class="form-check-label") Dừng hoạt động
-    
-    div(class="form-group")
-      button(
-        id="btnEdit"
-        type="submit"
-        class="btn btn-primary"
-      ) Cập nhật
+        label(for="thumbnail") Ảnh<br>
+        input(
+          type="file"
+          class="form-control-file"
+          id="thumbnail"
+          name="thumbnail"
+          accept="image/*"
+          upload-image-input
+          value=product.thumbnail
+        )
+      
+      img(src=`${product.thumbnail}` 
+          upload-image-preview
+          class="image-preview"
+        )
 
- 
+      div(class="form-group")
+        label(for="position") Vị trí
+        input(
+          type="number"
+          class="form-control"
+          id="position"
+          name="position"
+          placeholder="Tự động tăng"
+          min="1"
+          value=product.position
+        )
+      
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value=product.status
+          checked = (product.status=="active" ?true :false)
+        )
+        label(for="statusActive" class="form-check-label") Hoạt động
+
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInactive"
+          name="status"
+          value=product.status
+          checked = (product.status=="inactive" ?true :false)
+        )
+        label(for="statusInactive" class="form-check-label") Dừng hoạt động
+      
+      div(class="form-group")
+        button(
+          id="btnEdit"
+          type="submit"
+          class="btn btn-primary"
+        ) Cập nhật
+
+  
 
   script(src="/admin/js/product.js")
