--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -56,6 +56,7 @@ block main
                 th Giá
                 th Vị trí
                 th Trạng thái
+                th Người tạo
                 th Hành động
             
             tbody 
@@ -99,6 +100,7 @@ block main
                       data-id=item.id
                       button-change-status 
                       class="badge bg-warning") Dừng hoạt động
+                  td #{item.accountFullName}
                   td 
                     a(
                         href=`${prefixAdmin}/products/detail/${item.id}`
