--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -5,6 +5,7 @@ include ../../mixins/pagination.pug
 include ../../mixins/changeMulti.pug
 include ../../mixins/alert.pug
 include ../../mixins/sort.pug
+include ../../mixins/moment.pug
 
 block main
   if(role.permissions.includes("products_view"))
@@ -102,6 +103,7 @@ block main
                       class="badge bg-warning") Dừng hoạt động
                   td 
                     p #{item.accountFullName}
+                    p #{moment(item.createdBy.created_at).format("DD/MM/YYYY HH:mm:ss")}
                   td 
                     a(
                         href=`${prefixAdmin}/products/detail/${item.id}`
