--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -8,7 +8,7 @@ header.header
       .col-2
         div(class="text-end")
           a(
-            href=`${prefixAdmin}/auth/logout`
+            href=`${prefixAdmin}/my-account`
             class="btn btn-sm btn-danger ms-2"
           ) #{user.fullName}
           a(
