--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/product-layout.pug
 
 block main
   .container 
@@ -8,15 +9,4 @@ block main
         .box-head
           +box-head("Danh sách sản phẩm")
     
-    .row 
-      each item in products
-        .col-3.mb-3 
-          .product-item 
-            .inner-image 
-              img(src=`${item.thumbnail}`)
-            div(class="all-content")
-              h4.inner-title 
-                a(href=`/products/${item.slug}`) #{item.title}
-              .inner-price-new <b>#{item.priceNew}$</b>
-              .inner-price-old <b>#{item.price}$</b>
-              .inner-discount.badge.bg-danger -#{item.discountPercentage}%
+    +product-grid(products)
