--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,6 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
-include ../../mixins/product-layout.pug
+include ../../mixins/products-layout.pug
 
 block main
   .container 
